--- a/road2AGI/templates/login.html
+++ b/road2AGI/templates/login.html
@@ -4,8 +4,8 @@
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="https://github.com/anfederico/Flaskex/raw/master/media/flaskex-logo.png" alt="Flaskex">
-        <h6 href="/" class="subtitle"><strong>Flaskex</strong></h6>
+        <img src="/static/images/logo.jpg" alt="Flaskex">
+        <h6 href="/" class="subtitle"><strong>Wastex</strong></h6>
       </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
@@ -54,11 +54,11 @@
       <div class="columns">
         <div class="column is-auto">
           <br>
-          <p class="title is-2">Flaskex</p>
-          <p class="subtitle is-4"><i>Simple example for rapid prototyping</i></p>
-          <p class="subtitle is-5">&#x2022 Encrypted user authorizaton</p>
-          <p class="subtitle is-5">&#x2022 Ready to go database system</p>
-          <p class="subtitle is-5">&#x2022 User login, signup, and settings</p>
+          <p class="title is-2">Waste sorting classifier</p>
+          <p class="subtitle is-4"><i>Know your trash & Save the Planet</i></p>
+          <p class="subtitle is-5">&#x2022 Upload an image of a product waste</p>
+          <p class="subtitle is-5">&#x2022 Let the AI makes prediction </p>
+          <p class="subtitle is-5">&#x2022 Throw your product in the right container </p>
         </div>
         <div class="column is-auto">
           <div id="signup-box" class="signup-box">
@@ -114,21 +114,10 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          <strong>Flaskex</strong> by Anthony Federico
+          <strong>Wastex</strong> by MMWML
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
-          </span>2017</a>
-        </p>
-        <p>
-          <a class="icon has-text-primary" href="https://github.com/anfederico" target="_blank">
-            <i class="fa fa-globe"></i>
-          </a>
-          <a class="icon has-text-primary" href="https://github.com/anfederico" target="_blank">
-            <i class="fa fa-github"></i>
-          </a>
-          <a class="icon has-text-primary" href="mailto:anfederico@github.user" target="_blank">
-            <i class="fa fa-envelope"></i>
-          </a>
+          </span>2019
         </p>
       </div>
     </div>
