--- a/road2AGI/templates/settings.html
+++ b/road2AGI/templates/settings.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
 {% include "navbar.html" %}
-<title>Flaskex</title>
+<title>Wastex</title>
 <section class="hero is-primary is-bold is-small">
   <div class="hero-body">
     <div class="container has-text-centered">
       <div id="settings" class="settings-box">
-        <div class="settings-area">    
-          <h1 class="title">Settings</h1>         
+        <div class="settings-area">
+          <h1 class="title">Settings</h1>
           <div class="field">
             <p class="control has-icons-left">
               <input id="settings-user" class="input is-success" type="text" placeholder="{{user.username}}" readonly="readonly">
@@ -43,7 +43,7 @@
           <br>
           <i><a id="feedback" class="feedback"></a></i>
         </div>
-      </div>    
+      </div>
     </div>
   </div>
 </section>
